--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "scripts": {
-    "server": "http-server . -c-1 -p 46345 --cors",
-    "demo": "webpack-dev-server --open",
-    "bundle": "webpack --display-modules"
+    "predemo": "rm -rf ./dist && webpack && cp big.pdf ./dist/big.pdf ",
+    "demo": "http-server ./dist -c-1 --cors -o"
   },
   "dependencies": {
     "jquery": "3.4.1"
@@ -18,12 +17,12 @@
     "css-loader": "2.1.1",
     "file-loader": "3.0.1",
     "html-webpack-plugin": "3.2.0",
-    "image-webpack-loader": "4.6.0",
     "pdfjs-dist": "2.0.943",
     "style-loader": "0.23.1",
     "ts-loader": "6.0.1",
     "ts-node": "8.2.0",
     "typescript": "3.4.5",
+    "url-loader": "1.1.2",
     "webpack": "4.32.2",
     "webpack-cli": "3.3.2",
     "webpack-dev-server": "3.4.1"
